deploymentRoot/objects/Org_Connector_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The custom setting is used to store all types of constant used in CreateConnectionController</description>
    <fields>
        <fullName>Base_URL_Login__c</fullName>
        <description>Field holds value of base urk of developer and production org</description>
        <label>Base URL Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL_Test__c</fullName>
        <label>Base URL Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id_URL__c</fullName>
        <label>Client Id URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret_Key__c</fullName>
        <label>Client Secret Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Type_Self__c</fullName>
        <label>Connection Type Self</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <description>Holds the connected app Consumer Key</description>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Hint__c</fullName>
        <label>Login Hint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_URL__c</fullName>
        <description>The field contains the value of OAuth Url path</description>
        <label>OAuth URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oath_Token_Url__c</fullName>
        <label>Oath Token Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgType_Production_developer__c</fullName>
        <label>OrgType Production/developer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prompt_Encoded__c</fullName>
        <label>Prompt Encoded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URI__c</fullName>
        <label>Redirect URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <description>The field stores the redirect URL mentioned in connected app</description>
        <label>Redirect URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Connection__c</fullName>
        <label>Self Connection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_URI__c</fullName>
        <label>State URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Org Connector Config</label>
</CustomObject>